--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="home">
   <img src="assets/jef_logo.png" class="logo">
-  <h1><a href="https://www.instagram.com/jefadel/" target="_blank"> &#64;jefadel</a>&nbsp;Professional Portfolio
+  <img src="assets/soma.png" class="logo soma">
+  <img src="assets/dano.png" class="logo dano">
+  <h1 class="typewriter-line">
+    <span class="typewriter-wrapper">
+      <a href="https://www.instagram.com/jefadel/" target="_blank">&#64;jefadel</a>&nbsp;Professional Portfolio
+    </span>
   </h1>
 </div>
